--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ astroid==2.3.3
 attrs==19.3.0
 autobahn==20.4.3
 Automat==20.2.0
+Babel==2.8.0
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
@@ -19,15 +20,12 @@ distlib==0.3.1
 dnspython==2.0.0
 docopt==0.6.2
 docutils==0.16
-email-validator==1.1.1
 feedparser==5.2.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.1
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
 future==0.18.2
 gitsome==0.8.4
 hyperlink==19.0.0
@@ -44,7 +42,6 @@ mccabe==0.6.1
 msgpack-python==0.5.6
 packaging==20.4
 pefile==2019.4.18
-Pillow==7.2.0
 ply==3.11
 prompt-toolkit==2.0.10
 pyasn1==0.4.8
@@ -58,13 +55,18 @@ python-editor==1.0.4
 python-engineio==3.13.2
 python-socketio==4.6.0
 pytz==2016.10
-redis==2.10.6
 requests==2.24.0
 sdl==0.0.0
 service-identity==18.1.0
 six==1.14.0
 snowballstemmer==2.0.0
-SQLAlchemy==1.3.19
+Sphinx==3.2.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.3.1
 txaio==20.4.1
 uritemplate==3.0.1
@@ -74,5 +76,4 @@ virtualenv==20.0.28
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.11.2
-WTForms==2.3.3
 zope.interface==5.1.0
